--- a/Web Kelas V1/2.css
+++ b/Web Kelas V1/2.css
@@ -143,7 +143,7 @@
     background-size: cover;
     position: relative;
     background-color: black;
-    background-image: url("/foto/WhatsApp\ Image\ 2024-09-17\ at\ 20.20.48_79fd4373.jpg");
+    background-image: url("./foto/WhatsApp\ Image\ 2024-09-17\ at\ 20.20.48_79fd4373.jpg");
     display: flex;
 }
 
@@ -369,7 +369,7 @@
     background-size: cover;
     position: relative;
     background-color: black;
-    background-image: url('/foto/fotoo.jpg');
+    background-image: url('./foto/fotoo.jpg');
     display: flex;
     color: white;
 }
@@ -530,4 +530,5 @@
     .foto1{
         height: 100px;
     }
+
 }
